Temp/Entropy graph now approximately a rectangle (now displaying change in entropy rather than entropy itself) Tooltip updates Bug fixes Minor changes